-> Reworked board/sort (spongebob)
-> Reworked board/stats (spongebob)
-> Reworked board/navtop (spongebob)
-> Reworked events mod (hajo)
-> Reworked how and what install plus clansphere mod check for in the webserver environment (hajo)
-> Switched from FCKEditor to the most current version of the CKEditor (hajo)

-- CKEditor 3.2 and FCKEditor Filebrowser 2.6.6 included in this release


ClanSphere 2009.0.3.1 >> 2010-05-01
___________________________________________________________

- /mods/captcha/generate.php: Secured IP adress in query string
- /system/database/mysql.php: Changed where-condition quote replacement


ClanSphere 2009.0.3 >> 2009-12-06
___________________________________________________________

-> Added topmatch checkbox for clanwars and wars/navtop (palle)
-> Added possibility to list only wars of one squad in wars/navlist (gahero/palle)
-> Fixed security incident in usergallery (nenti)
-> Fixed deactivation of contact, joinus and fightus modul (duriel)
-> Fixed vote for gallery pics (fr33z3m4n)
-> Fixed categories creation without access (fr33z3m4n)
-> Fixed many bugs in the server module (fr33z3m4n)
-> Fixed many bugs in the comments module, also two security bugs (gahero)
-> Fixed some bugs in the cups module (duriel)
-> Reworked board toplist for much better performance (duriel)
-> Reworked war statistic - squadbased and more information (gahero)
-> Updated FCKEditor to 2.6.5 (hajo)


ClanSphere 2009.0.2 >> 2009-07-07
___________________________________________________________

>> Security: Updated FCKEditor to 2.6.4.1 (hajo)

-> Changed fckeditor quickupload to use the matching subdirectory (hajo)
-> Fixed ajax uploads to not cause php errors in some cases (hajo)
-> Fixed install settings 'show' form to work again (hajo)
-> Fixed messages sorting and subject error message (hajo)


ClanSphere 2009.0.1 >> 2009-07-05
___________________________________________________________

-- Recommended PHP version changed to 5.3.0
