@@ -1,0 +1,3 @@
+UPDATE {pre}_options SET options_value = '2009.0.3.2' WHERE options_mod = 'clansphere' AND options_name = 'version_name';
+UPDATE {pre}_options SET options_value = '2010-05-05' WHERE options_mod = 'clansphere' AND options_name = 'version_date';
+UPDATE {pre}_options SET options_value = 52 WHERE options_mod = 'clansphere' AND options_name = 'version_id';
